--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>cloud-consumer-order80</module>
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7003</module>
+        <module>cloud-provider-payment8004</module>
+        <module>cloud-consumerzk-order80</module>
     </modules>
 
 
