--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>cloud-consumerzk-order80</module>
         <module>cloud-paymentconsul-payment8006</module>
         <module>cloud-consumerconsul-order80</module>
+        <module>cloud-provider-payment8002</module>
     </modules>
 
 
