--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>cloud-paymentconsul-payment8006</module>
         <module>cloud-consumerconsul-order80</module>
         <module>cloud-provider-payment8002</module>
+        <module>cloud-consume-rfeign-order80</module>
     </modules>
 
 
