--- a/cloud-config-center-3344/src/main/resources/application.yml
+++ b/cloud-config-center-3344/src/main/resources/application.yml
@@ -14,7 +14,11 @@ spring:
             - springcloud2020-config
       ##读取分支
       label: master
-
+  rabbitmq:
+    host: 192.168.92.129
+    port: 5672
+    username: guest
+    password: guest
 
 
 eureka:
@@ -26,3 +30,10 @@ eureka:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka
       #defaultZone: http://eureka7001.com:7001/eureka,http://eureka7003.com:7003/eureka
+
+#rabbitmq相关设置 ，暴露 bus刷新配置的端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'bus-refresh'
