--- a/miaosha/pom.xml
+++ b/miaosha/pom.xml
@@ -50,6 +50,9 @@
             <artifactId>guava</artifactId>
             <version>28.2-jre</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
