activeMQ,在点对点的消息传递域中,目的地被称为队列(queue)

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
         <module>seata-account-service2003</module>
         <module>rabbitmq-study</module>
         <module>rabbitmqboot-study</module>
+        <module>miaosha</module>
+        <module>activemq-01</module>
     </modules>
 
 
