--- a/seata-account-service2003/pom.xml
+++ b/seata-account-service2003/pom.xml
@@ -47,6 +47,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid-spring-boot-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
