springboot 整合activemqTopic,非持久

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
         <module>activemq-spring</module>
         <module>boot-mq-produver</module>
         <module>boot-mq-consumer</module>
+        <module>boot-mq-topic-producer</module>
+        <module>boot-mq-topic-consumer</module>
     </modules>
 
 
