--- a/seata-account-service2003/pom.xml
+++ b/seata-account-service2003/pom.xml
@@ -44,14 +44,15 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
-    <!--    <dependency>
+       <!-- <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
         <!--jdbc-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
